--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "react-router build",
 		"dev": "react-router dev",
+		"build": "react-router build",
+		"deploy": "pnpm run build && wrangler deploy",
+		"postinstall": "pnpm run cf-typegen",
+		"cf-typegen": "wrangler types",
 		"start": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc",
+		"preview": "pnpm run build && vite preview",
+		"typecheck": "pnpm run cf-typegen && react-router typegen && tsc -b",
 		"lint": "biome check",
 		"lint:fix": "biome check --write --unsafe"
 	},
@@ -21,6 +25,8 @@
 		"react-router": "^7.9.2"
 	},
 	"devDependencies": {
+		"@cloudflare/vite-plugin": "^1.13.5",
+		"wrangler": "^4.45.4",
 		"@biomejs/biome": "^2.3.2",
 		"@react-router/dev": "^7.9.2",
 		"@tailwindcss/vite": "^4.1.13",
