--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,32 @@
 		".react-router/types/**/*"
 	],
 	"compilerOptions": {
-		"lib": ["DOM", "DOM.Iterable", "ES2022"],
-		"types": ["node", "vite/client"],
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ES2022"
+		],
+		"types": [
+			"node",
+			"vite/client",
+			"./worker-configuration.d.ts"
+		],
 		"target": "ES2022",
 		"module": "ES2022",
 		"moduleResolution": "bundler",
 		"jsx": "react-jsx",
-		"rootDirs": [".", "./.react-router/types"],
+		"rootDirs": [
+			".",
+			"./.react-router/types"
+		],
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./app/*"]
+			"@/*": [
+				"./app/*"
+			]
 		},
 		"esModuleInterop": true,
+		"checkJs": true,
 		"verbatimModuleSyntax": true,
 		"noEmit": true,
 		"resolveJsonModule": true,
