--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "typecheck": "pnpm run cf-typegen && react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@react-router/fs-routes": "^7.9.6",
     "isbot": "^5.1.31",
-    "lucide-react": "^0.554.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2",
     "react-dom": "^19.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.2"
   },
   "devDependencies": {
