--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "typecheck": "pnpm run cf-typegen && react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-router/fs-routes": "^7.10.1",
     "isbot": "^5.1.32",
-    "radix-ui": "^1.4.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
